# computerdicuss_forum_bot

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  README_CN.md  build.gradle.kts  computerdicuss_forum_bot.sln  config.sample.toml  package.json  settings.gradle.kts  startup.bat  tsconfig.json  update.bat
.history/: build_20210925232137.bat  build_20210925232208.bat  build_20210925232211.bat  build_20210925232531.bat
.history/src/: commands_20210925234159.ts  commands_20210925234201.ts  commands_20210925234207.ts  commands_20210925234211.ts  commands_20210925234216.ts  commands_20210925234218.ts
ComputerDiscuss.DiscordAdminBot/: ComputerDiscuss.DiscordAdminBot.csproj  Startup.cs  config.yaml
ComputerDiscuss.DiscordAdminBot/Commands/: General.cs  Help.cs  Sticker.cs
ComputerDiscuss.DiscordAdminBot/Messaging/: DefaultMessagingExecutor.cs  DefaultMessagingHandler.cs  IMessagingExecutor.cs  IMessagingHandler.cs
ComputerDiscuss.DiscordAdminBot/Migrations/: 20210928145920_InitialCreate.cs  20210928165425_ChangedStickerIDType.cs  20211007190010_AddedConverSession.Designer.cs  20211007190010_AddedConverSession.cs  20211007190222_ChangedStickerIDName.Designer.cs  20211007190222_ChangedStickerIDName.cs  20211008182356_AddedClosedSessionAttribute.Designer.cs  20211008182356_AddedClosedSessionAttribute.cs  20211008185802_RemovedClosedFlag.Designer.cs  20211008185802_RemovedClosedFlag.cs  20211017144723_SaperatedUserNameField.Designer.cs  BotDBContextModelSnapshot.cs  (+3 more)
ComputerDiscussForumBot/: CMakeLists.txt
ComputerDiscussForumBot/src/: Main.cpp
computerdicuss_forum_bot/: Client.cs  ComputerDiscuss.DiscordAdminBot.csproj  ComputerDiscussForumBot.csproj  Config.cs  Log.cs  Program.cs  Startup.cs  computerdicuss_forum_bot.csproj  log4net.config
src/: commands.ts  index.ts  main.rs  sticker_handler.ts
(+271 files in other folders)
