[package]
name = "computerdicuss_forum_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.20"
poise = "0.5.5"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
serde = "1.0.185"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.6"
